--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="msapplication-config" content="browserconfig.xml">
         <meta name="theme-color" content="#ffffff">
-
-        <script src="./assets/js/main.js" defer></script>
+        <script src="./assets/js/utils/utils.js" type ="module" defer></script>
+        <script src="./assets/js/application.js" type ="module" defer></script>
+        <script src="./assets/js/main.js" type ="module" defer></script>
     </head>
     <body>
         <noscript>
