--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <meta name="theme-color" content="#ffffff">
         <script src="./assets/js/utils/utils.js" type ="module" defer></script>
         <script src="./assets/js/application.js" type ="module" defer></script>
-        <script src="./assets/js/main.js" type ="text/javascript" defer></script>
+        <script src="./assets/js/main.js" type ="module" defer></script>
     </head>
     <body>
         <noscript>
