--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="msapplication-config" content="browserconfig.xml">
         <meta name="theme-color" content="#ffffff">
+        <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
         <script src="./assets/js/utils/utils.js" type ="module" defer></script>
         <script src="./assets/js/application.js" type ="module" defer></script>
         <script src="./assets/js/main.js" type ="module" defer></script>
