--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <script src="./assets/js/utils/utils.js" type ="module" defer></script>
         <script src="./assets/js/application.js" type ="module" defer></script>
         <script src="./assets/js/main.js" type ="module" defer></script>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     </head>
     <body>
         <noscript>
