--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <meta name="theme-color" content="#ffffff">
         <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
         <script src="./assets/js/utils/utils.js" type ="module" defer></script>
-        <script src="./assets/js/application.js" type ="module" defer></script>
+        <script src="./assets/js/Application.js" type ="module" defer></script>
         <script src="./assets/js/main.js" type ="module" defer></script>
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     </head>
