Tweak roles sentences

--- a/assets/html/hardships.html
+++ b/assets/html/hardships.html
@@ -13,8 +13,8 @@
     <ul>
         <li><p>Mathias: Principalement du back-end avec la base de données, la récupération des données et la notification des systèmes associées. Il a aussi fait deux composants front-end</p></li>
         <li><p>Sebastien: Structure html et visuelle globale, du système d'onglet et des interactions utilisateurs.</p></li>
-        <li><p>Nicolas: S'est occupé de la partie PWA, du système d'alertes et des notifications associées</p></li>
-        <li><p>Franck: Il a fait un graphe ainsi que son accessibilité</p></li>
+        <li><p>Nicolas: Il s'est occupé de la partie PWA ainsi du système d'alertes et des notifications associées.</p></li>
+        <li><p>Franck: Il a fait un graphe ainsi que son accessibilité.</p></li>
     </ul>
 
     <h2>Outils</h2>
